--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     header h1 {
-      font-size: 1.2rem;
+      font-size: 0.6rem; /* Reduced size */
       margin-right: 20px;
       background: linear-gradient(270deg, #ff8a00, #e52e71, #6a11cb, #ff8a00);
       background-size: 600% 600%;
@@ -361,7 +361,7 @@
     <p>"Amazing quality and fast delivery. Highly recommend their products!"</p>
     <h4>Arnav Sharma</h4>
   </div>
-    
+
   <div class="testimonial-card">
     <p>"Overall Product quality is good and delivery was so fast"</p>
     <h4>Ankit Mishra</h4>
@@ -371,7 +371,7 @@
 <!-- Contact Section -->
 <section id="contact">
   <h3>Contact Us</h3>
-  <p>Email: glowsygalaxyshopgmail.com</p>
+  <p>Email: glowsygalaxyshop@gmail.com</p>
 </section>
 
 <footer>
