--- a/index.html
+++ b/index.html
@@ -5,351 +5,255 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Glowsy Galaxy Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    html, body {
-      width: 100%;
-      overflow-x: hidden;
       font-family: 'Poppins', sans-serif;
-      background-color: #ffffff;
-      color: #333;
+      background: #ffffff;
     }
     header {
-      background-color: #e3f2fd;
-      color: #1e2a38;
-      display: flex;
-      align-items: center;
+      background: #e3f2fd;
       padding: 10px 20px;
+      display: flex;
       justify-content: space-between;
-      position: relative;
+      align-items: center;
     }
     header h1 {
-      font-size: 0.5rem;
-      margin-right: 20px;
-      background: linear-gradient(270deg, #ff8a00, #e52e71, #6a11cb, #ff8a00);
-      background-size: 600% 600%;
-      background-clip: text;
-      -webkit-background-clip: text;
-      color: transparent;
-      -webkit-text-fill-color: transparent;
-      animation: gradientShift 8s ease infinite;
-    }
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      font-size: 1.5rem;
+      color: #333;
     }
     .search-bar input {
-      width: 210px;
-      padding: 10px;
-      border-radius: 6px;
-      border: none;
-      font-size: 1rem;
+      padding: 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
     }
     .hamburger {
-      font-size: 26px;
-      margin-left: 015px;
+      font-size: 24px;
       cursor: pointer;
-      user-select: none;
-      padding: 6px 10px;
+      margin-left: 10px;
     }
     .dropdown-menu {
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background-color: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      border-radius: 6px;
       display: none;
+      position: absolute;
+      right: 20px;
+      top: 60px;
+      background: white;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
       flex-direction: column;
-      z-index: 100;
-      min-width: 150px;
+    }
+    .dropdown-menu.show {
+      display: flex;
     }
     .dropdown-menu a {
-      padding: 10px 15px;
+      padding: 10px;
       text-decoration: none;
       color: #333;
       border-bottom: 1px solid #eee;
-      transition: background 0.2s;
-    }
-    .dropdown-menu a:hover {
-      background-color: #f1f1f1;
     }
     nav {
-      background-color: #34495e;
+      background: #34495e;
       padding: 10px;
       text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
     nav a {
       color: white;
       margin: 0 15px;
       text-decoration: none;
-      font-weight: 600;
-      position: relative;
-      transition: all 0.3s ease;
     }
-    nav a:hover {
-      color: #f39c12;
-      transform: translateY(-5px);
-    }
-    nav a::before {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 3px;
-      background-color: #f39c12;
-      transform: scaleX(0);
-      transform-origin: bottom right;
-      transition: transform 0.3s ease-out;
-    }
-    nav a:hover::before {
-      transform: scaleX(1);
-      transform-origin: bottom left;
-    }
-    .carousel-container {
-      display: flex;
-      overflow-x: auto;
-      overflow-y: hidden;
-      padding: 20px 10px;
-      flex-wrap: nowrap;
-      scroll-behavior: smooth;
-      max-width: 100vw;
-    }
-    .carousel-container::-webkit-scrollbar {
-      display: none;
-    }
-    .product-card {
-      flex: 0 0 auto;
-      width: 240px;
-      margin-right: 15px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-    .product-card:hover {
-      transform: scale(1.03);
-    }
-    .product-image img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-    .product-info {
-      padding: 10px;
-    }
-    .product-info h3 {
-      font-size: 1rem;
-      margin: 5px 0;
-    }
-    .product-info p {
-      font-size: 0.85rem;
-      color: #888;
-    }
-    .price {
-      font-size: 1.1rem;
-      color: #27ae60;
-      font-weight: bold;
-      margin: 8px 0;
-    }
-    .btn {
-      display: inline-block;
-      background-color: #f39c12;
-      color: white;
-      padding: 8px 14px;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 0.9rem;
-      cursor: pointer;
-      border: none;
-    }
-    .btn:hover {
-      background-color: #c87509;
+    main {
+      padding: 20px;
     }
     footer {
-      background-color: #1e2a38;
+      background: #1e2a38;
       color: white;
+      text-align: center;
       padding: 20px;
-      text-align: center;
-      margin-top: 40px;
     }
-    section#contact {
-      padding: 40px;
-      background: #ffffff;
-    }
-    .hero {
-      position: relative;
-      width: 100%;
-      height: 500px;
-      background-image: url('https://via.placeholder.com/1200x500');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      text-align: center;
-      display: flex;
+
+    /* Modal Login Style */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      overflow: auto;
+      background: rgba(0,0,0,0.5);
+      backdrop-filter: blur(5px);
       justify-content: center;
       align-items: center;
     }
-    .hero-content {
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 10px;
-      max-width: 600px;
+    .modal-content {
+      background: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      width: 300px;
+      text-align: center;
+      box-shadow: 0px 8px 20px rgba(0,0,0,0.3);
+      position: relative;
     }
-    .hero h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-      font-weight: 600;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-    .cta-btn {
-      background-color: #f39c12;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1rem;
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
       border-radius: 5px;
     }
-    .cta-btn:hover {
-      background-color: #c87509;
+    .modal-content button {
+      background: #007bff;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      margin-top: 10px;
+      cursor: pointer;
     }
-    .testimonials {
-      padding: 40px;
-      background-color: #f8f8f8;
-      text-align: center;
+    .close {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      cursor: pointer;
+      font-size: 20px;
     }
-    .testimonial-card {
-      background-color: white;
-      margin: 15px;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-      display: inline-block;
-      vertical-align: top;
-      text-align: center;
-    }
-    .testimonial-card h4 {
-      margin-top: 10px; /* Added space between review and name */
-    }
-    .dropdown-menu.show {
-      display: flex;
+    #toast {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #333;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 30px;
+      display: none;
+      z-index: 2000;
+      font-size: 14px;
     }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>Glowsy Galaxy Shop</h1>
-    <div style="display: flex; align-items: center;">
-      <div class="search-bar">
-        <input type="text" placeholder="Search products..." />
-      </div>
-      <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
-      <div class="dropdown-menu" id="dropdownMenu">
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#carousel">Trending</a>
-        <a href="#">Cart</a>
-        <a href="#contact">Contact</a>
-        <a href="#">About</a>
-      </div>
+
+<header>
+  <h1>Glowsy Galaxy Shop</h1>
+  <div style="display: flex; align-items: center;">
+    <div class="search-bar">
+      <input type="text" placeholder="Search..." />
     </div>
-  </header>
-  <nav>
-    <a href="#carousel">Trending</a>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+  </div>
+  <div class="dropdown-menu" id="dropdownMenu">
+    <a href="#">Home</a>
     <a href="#">Shop</a>
     <a href="#contact">Contact</a>
-    <a href="#">About</a>
-  </nav>
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Welcome to Glowsy Galaxy Shop!</h2>
-      <p>Enhance your home with premium LED mirrors and stylish home decor. Shop now and shine bright!</p>
-      <a href="#carousel" class="cta-btn">Shop Now</a>
-    </div>
-  </section>
-  <section class="carousel-container" id="carousel">
-    <div class="product-card">
-      <div class="product-image">
-        <img src="https://via.placeholder.com/300x160" alt="Product 1">
-      </div>
-      <div class="product-info">
-        <h3>Led Mirror 2.2</h3>
-        <p>Condition: Excellent</p>
-        <div class="price">₹2999.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20Led%20Mirror%202.2%20from%20Glowsy%20Galaxy%20Shop"
-           class="btn">Buy Now</a>
-      </div>
-    </div>
-    <div class="product-card">
-      <div class="product-image">
-        <img src="https://via.placeholder.com/300x160" alt="Product 2">
-      </div>
-      <div class="product-info">
-        <h3>Led Mirror</h3>
-        <p>Condition: Good</p>
-        <div class="price">₹1999.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20Led%20Mirror%20from%20Glowsy%20Galaxy%20Shop"
-           class="btn">Buy Now</a>
-      </div>
-    </div>
-    <div class="product-card">
-      <div class="product-image">
-        <img src="https://via.placeholder.com/300x160" alt="Product 3">
-      </div>
-      <div class="product-info">
-        <h3>LED Mirror 1.0</h3>
-        <p>Condition: Like New</p>
-        <div class="price">₹1599.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20LED%20Mirror%201.0%20from%20Glowsy%20Galaxy%20Shop"
-           class="btn">Buy Now</a>
-      </div>
-    </div>
-  </section>
-  <section class="testimonials">
-    <h3>What Our Customers Say</h3>
-    <div class="testimonial-card">
-      <p>"The LED mirrors from Glowsy Galaxy Shop are stunning! My living room has never looked better."</p>
-      <h4>Rahul Tiwari</h4>
-    </div>
-    <div class="testimonial-card">
-      <p>"Amazing quality and fast delivery. Highly recommend their products!"</p>
-      <h4>Arnav Sharma</h4>
-    </div>
-    <div class="testimonial-card">
-      <p>"Overall Product quality is good and delivery was so fast"</p>
-      <h4>Ankit Mishra</h4>
-    </div>
-  </section>
-  <section id="contact">
-    <h3>Contact Us</h3>
-    <p>Email: glowsygalaxyshop@gmail.com</p>
-  </section>
-  <footer>
-    <p>&copy; 2025 Glowsy Galaxy Shop. All rights reserved.</p>
-  </footer>
-  <script>
-    function toggleMenu() {
-      var menu = document.getElementById('dropdownMenu');
-      menu.classList.toggle('show');
+    <a href="#" id="loginLink">Login</a>
+    <a href="#" id="logoutLink" style="display:none;">Logout</a>
+  </div>
+</header>
+
+<nav>
+  <a href="#">Home</a>
+  <a href="#">Trending</a>
+  <a href="#">About</a>
+</nav>
+
+<main>
+  <h2>Welcome to Glowsy Galaxy Shop</h2>
+  <p>Premium LED Mirrors and Home Decor!</p>
+</main>
+
+<footer>
+  &copy; 2025 Glowsy Galaxy Shop
+</footer>
+
+<!-- Login Modal -->
+<div class="modal" id="loginModal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email Address" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
+  </div>
+</div>
+
+<div id="toast"></div>
+
+<!-- Firebase SDK -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
+  import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCfiuZR7YHjsMm2ZD5ODWkpyqB3OvwDxoQ",
+    authDomain: "glowsy-galaxy-shop-518c2.firebaseapp.com",
+    projectId: "glowsy-galaxy-shop-518c2",
+    storageBucket: "glowsy-galaxy-shop-518c2.appspot.com",
+    messagingSenderId: "593285937055",
+    appId: "1:593285937055:web:91e7edcd92834a42f22faa",
+    measurementId: "G-QLFBVFNTN1"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const auth = getAuth(app);
+
+  window.toggleMenu = function() {
+    const menu = document.getElementById('dropdownMenu');
+    menu.classList.toggle('show');
+  }
+
+  // Open login modal
+  document.getElementById('loginLink').addEventListener('click', function() {
+    document.getElementById('loginModal').style.display = 'flex';
+  });
+
+  window.closeModal = function() {
+    document.getElementById('loginModal').style.display = 'none';
+  }
+
+  window.login = function() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        showToast("Login Successful!");
+        closeModal();
+      })
+      .catch((error) => {
+        showToast(error.message);
+      });
+  }
+
+  document.getElementById('logoutLink').addEventListener('click', function() {
+    signOut(auth).then(() => {
+      showToast("Logged out successfully!");
+    }).catch((error) => {
+      console.error(error);
+    });
+  });
+
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      document.getElementById('loginLink').style.display = 'none';
+      document.getElementById('logoutLink').style.display = 'block';
+    } else {
+      document.getElementById('loginLink').style.display = 'block';
+      document.getElementById('logoutLink').style.display = 'none';
     }
-  </script>
+  });
+
+  function showToast(message) {
+    const toast = document.getElementById('toast');
+    toast.textContent = message;
+    toast.style.display = 'block';
+    setTimeout(() => {
+      toast.style.display = 'none';
+    }, 3000);
+  }
+</script>
+
 </body>
 </html>
