--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Glowsy Galaxy Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { width: 100%; overflow-x: hidden; font-family: 'Poppins', sans-serif; background-color: #ffffff; color: #333; }
-
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html, body {
+      width: 100%;
+      overflow-x: hidden;
+      font-family: 'Poppins', sans-serif;
+      background-color: #ffffff;
+      color: #333;
+    }
     header {
       background-color: #e3f2fd;
       color: #1e2a38;
@@ -21,7 +28,7 @@
       position: relative;
     }
     header h1 {
-      font-size: 0.8rem;
+      font-size: 0.5rem;
       margin-right: 20px;
       background: linear-gradient(270deg, #ff8a00, #e52e71, #6a11cb, #ff8a00);
       background-size: 600% 600%;
@@ -36,194 +43,272 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-    .login-btn, .user-info-btn {
+    .search-bar input {
+      width: 210px;
+      padding: 10px;
+      border-radius: 6px;
+      border: none;
+      font-size: 1rem;
+    }
+    .hamburger {
+      font-size: 26px;
+      margin-left: 15px;
+      cursor: pointer;
+      user-select: none;
+      padding: 6px 10px;
+      background-color: #f39c12;
+      color: #fff;
+      border-radius: 6px;
+    }
+    .dropdown-menu {
+      position: absolute;
+      top: 60px;
+      right: 10px;
+      background-color: #fff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      display: none;
+      flex-direction: column;
+      z-index: 100;
+      min-width: 170px;
+      overflow: hidden;
+    }
+    .dropdown-menu a {
+      padding: 12px 18px;
+      text-decoration: none;
+      color: #333;
+      border-bottom: 1px solid #eee;
+      transition: background 0.2s;
+      font-weight: 600;
+    }
+    .dropdown-menu a:hover {
+      background-color: #f1f1f1;
+    }
+    .dropdown-menu.show {
+      display: flex;
+    }
+    /* NAV and REST SAME */
+    nav {
+      background-color: #34495e;
+      padding: 10px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 600;
+      position: relative;
+      transition: all 0.3s ease;
+    }
+    nav a:hover {
+      color: #f39c12;
+      transform: translateY(-5px);
+    }
+    nav a::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #f39c12;
+      transform: scaleX(0);
+      transform-origin: bottom right;
+      transition: transform 0.3s ease-out;
+    }
+    nav a:hover::before {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+    .carousel-container {
+      display: flex;
+      overflow-x: auto;
+      overflow-y: hidden;
+      padding: 20px 10px;
+      flex-wrap: nowrap;
+      scroll-behavior: smooth;
+      max-width: 100vw;
+    }
+    .carousel-container::-webkit-scrollbar {
+      display: none;
+    }
+    .product-card {
+      flex: 0 0 auto;
+      width: 240px;
+      margin-right: 15px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
+    .product-card:hover {
+      transform: scale(1.03);
+    }
+    .product-image img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    .product-info {
+      padding: 10px;
+    }
+    .product-info h3 {
+      font-size: 1rem;
+      margin: 5px 0;
+    }
+    .product-info p {
+      font-size: 0.85rem;
+      color: #888;
+    }
+    .price {
+      font-size: 1.1rem;
+      color: #27ae60;
+      font-weight: bold;
+      margin: 8px 0;
+    }
+    .btn {
+      display: inline-block;
       background-color: #f39c12;
       color: white;
       padding: 8px 14px;
-      border-radius: 6px;
+      border-radius: 4px;
       text-decoration: none;
       font-weight: 600;
       font-size: 0.9rem;
-      border: none;
       cursor: pointer;
+      border: none;
     }
-    .login-btn:hover, .user-info-btn:hover {
+    .btn:hover {
       background-color: #c87509;
     }
-    .user-info {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    /* Modal Style */
-    .modal {
-      display: none; 
-      position: fixed; 
-      z-index: 999;
-      padding-top: 60px; 
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.5);
-    }
-    .modal-content {
-      background-color: #fff;
-      margin: auto;
+    footer {
+      background-color: #1e2a38;
+      color: white;
       padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 10px;
+      text-align: center;
+      margin-top: 40px;
     }
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
+    section#contact {
+      padding: 40px;
+      background: #ffffff;
     }
-    .close:hover, .close:focus {
-      color: black;
-    }
-    .form-group {
-      margin-bottom: 15px;
-    }
-    .form-group input {
+    .hero {
+      position: relative;
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
+      height: 500px;
+      background-image: url('https://via.placeholder.com/1200x500');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .hero-content {
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+      max-width: 600px;
+    }
+    .hero h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      font-weight: 600;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    .cta-btn {
+      background-color: #f39c12;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
       border-radius: 5px;
     }
-    .form-switch {
+    .cta-btn:hover {
+      background-color: #c87509;
+    }
+    .testimonials {
+      padding: 40px;
+      background-color: #f8f8f8;
       text-align: center;
-      margin-top: 15px;
-      cursor: pointer;
-      color: #f39c12;
+    }
+    .testimonial-card {
+      background-color: white;
+      margin: 15px;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      display: inline-block;
+      vertical-align: top;
+      text-align: center;
+    }
+    .testimonial-card h4 {
+      margin-top: 10px;
     }
   </style>
 </head>
-
 <body>
-
   <header>
     <h1>Glowsy Galaxy Shop</h1>
-    <div id="userSection">
-      <button class="login-btn" onclick="openModal()">Login/Signup</button>
+    <div style="display: flex; align-items: center;">
+      <div class="search-bar">
+        <input type="text" placeholder="Search products..." />
+      </div>
+      <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+      <div class="dropdown-menu" id="dropdownMenu">
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#carousel">Trending</a>
+        <a href="#">Cart</a>
+        <a href="#contact">Contact</a>
+        <a href="#">About</a>
+      </div>
     </div>
   </header>
-
-  <!-- Login/Signup Modal -->
-  <div id="authModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <h2 id="formTitle">Login</h2>
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" id="email" placeholder="Enter email" required>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" id="password" placeholder="Enter password" required>
-      </div>
-      <button class="login-btn" onclick="handleAuth()">Submit</button>
-      <div class="form-switch" onclick="switchForm()">Don't have an account? Register</div>
+  <nav>
+    <a href="#carousel">Trending</a>
+    <a href="#">Shop</a>
+    <a href="#contact">Contact</a>
+    <a href="#">About</a>
+  </nav>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Welcome to Glowsy Galaxy Shop!</h2>
+      <p>Enhance your home with premium LED mirrors and stylish home decor. Shop now and shine bright!</p>
+      <a href="#carousel" class="cta-btn">Shop Now</a>
     </div>
-  </div>
-
+  </section>
+  <section class="carousel-container" id="carousel">
+    <!-- Product cards here (same as your code) -->
+  </section>
+  <section class="testimonials">
+    <!-- Testimonials section (same) -->
+  </section>
+  <section id="contact">
+    <h3>Contact Us</h3>
+    <p>Email: glowsygalaxyshop@gmail.com</p>
+  </section>
+  <footer>
+    <p>&copy; 2025 Glowsy Galaxy Shop. All rights reserved.</p>
+  </footer>
   <script>
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCfiuZR7YHjsMm2ZD5ODWkpyqB3OvwDxoQ",
-      authDomain: "glowsy-galaxy-shop-518c2.firebaseapp.com",
-      projectId: "glowsy-galaxy-shop-518c2",
-      storageBucket: "glowsy-galaxy-shop-518c2.appspot.com",
-      messagingSenderId: "593285937055",
-      appId: "1:593285937055:web:91e7edcd92834a42f22faa",
-      measurementId: "G-QLFBVFNTN1"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    // Modal Functions
-    const modal = document.getElementById('authModal');
-    const formTitle = document.getElementById('formTitle');
-    let isLogin = true;
-
-    function openModal() {
-      modal.style.display = 'block';
-    }
-
-    function closeModal() {
-      modal.style.display = 'none';
-    }
-
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-
-    function switchForm() {
-      isLogin = !isLogin;
-      formTitle.textContent = isLogin ? 'Login' : 'Register';
-      document.querySelector('.form-switch').innerHTML = isLogin ? "Don't have an account? Register" : "Already have an account? Login";
-    }
-
-    function handleAuth() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      if (isLogin) {
-        auth.signInWithEmailAndPassword(email, password)
-          .then((userCredential) => {
-            alert('Login Successful!');
-            closeModal();
-          })
-          .catch((error) => {
-            alert(error.message);
-          });
-      } else {
-        auth.createUserWithEmailAndPassword(email, password)
-          .then((userCredential) => {
-            alert('Registration Successful!');
-            closeModal();
-          })
-          .catch((error) => {
-            alert(error.message);
-          });
-      }
-    }
-
-    // Listen for auth state changes
-    auth.onAuthStateChanged((user) => {
-      const userSection = document.getElementById('userSection');
-      if (user) {
-        const email = user.email;
-        userSection.innerHTML = `
-          <div class="user-info">
-            <button class="user-info-btn">${email}</button>
-            <button class="login-btn" onclick="logout()">Logout</button>
-          </div>
-        `;
-      } else {
-        userSection.innerHTML = `<button class="login-btn" onclick="openModal()">Login/Signup</button>`;
-      }
-    });
-
-    function logout() {
-      auth.signOut()
-        .then(() => {
-          alert('Logged out!');
-        })
-        .catch((error) => {
-          alert(error.message);
-        });
+    function toggleMenu() {
+      var menu = document.getElementById('dropdownMenu');
+      menu.classList.toggle('show');
     }
   </script>
-
 </body>
 </html>
